<resources>
    <string name="app_name">Zalo Pay</string>
    <string name="zpw_redpackage_app_id">6</string>
    <string name="allow_use_fingerprint_feature">1</string>
    <string name="allow_use_tracking_timing">1</string>
    <string name="allow_use_send_log_on_transactionfail">1</string>
    <string name="time_to_live_transaction">7</string>
    <string name="zpw_string_merchant_creditcard_3ds_url_prefix">pay/success?orderNo</string>
    <string name="zpw_string_pay_domain">123pay.vn</string>
    <string name="zpw_string_error_code_name_not_resolved">net::ERR_NAME_NOT_RESOLVED</string>
    <string name="zpw_string_error_code_timeout">net::ERR_TIMED_OUT</string>
    <string name="zpw_string_error_code_disconnected">net::ERR_INTERNET_DISCONNECTED</string>
    <string name="zpw_string_error_friendlymessage_name_not_resolved">Lỗi không phân giải được domain.\n Vui lòng thử lại!</string>
    <string name="zpw_string_error_friendlymessage_timeout">Lỗi tải trang timeout.\n Vui lòng thử lại!</string>
    <string name="zpw_string_error_friendlymessage_end_transaction">Giao dịch đã kết thúc. Vui lòng thực hiện lại giao dịch!</string>
    <string name="percent_ontablet">0.5</string>
    <string name="percent_ondefault">0.8</string>
    <string name="cardview_rate">1.6</string>
    <string name="zpw_font_regular">Roboto-Regular</string>
    <string name="zpw_font_medium">Roboto-Medium</string>
    <string name="zpw_font_unisec">UnisectVnu</string>
    <string name="zpw_string_transaction_expired">Thời gian giao dịch hết hiệu lực.\nVui lòng thực hiện lại giao dịch!</string>
    <string name="zpw_string_params_wrong">Thông tin thanh toán không hợp lệ.</string>
    <string name="zpw_not_allow_payment_app">Ứng dụng chưa được phép giao dịch.\nVui lòng chọn ứng dụng khác.</string>
    <string name="zpw_save_credit_card">%s ••• </string>
    <string name="zpw_save_credit_card_atm">Thẻ %s ••• </string>
    <string name="zpw_save_credit_card_default">Thẻ đã liên kết ••• </string>
    <string name="zpw_string_all_channel_maintenance">Kênh thanh toán đang bảo trì.</string>
    <string name="zpw_string_alert_min_amount_input">Số tiền giao dịch tối thiểu là %s VND</string>
    <string name="zpw_string_alert_max_amount_input">Số tiền giao dịch tối đa là %s VND</string>
    <string name="zingpaysdk_alert_transaction_success">Thanh toán thành công</string>
    <string name="zingpaysdk_alert_processing">Xử lý giao dịch</string>
    <string name="zingpaysdk_alert_checking">Kiểm tra giao dịch</string>
    <string name="zingpaysdk_alert_processing_otp">Kiểm tra mật khẩu giao dịch</string>
    <string name="zingpaysdk_alert_processing_bank">Xử lý với ngân hàng</string>
    <string name="zingpaysdk_alert_get_status">Nhận kết quả  giao dịch</string>
    <string name="zingpaysdk_alert_process_view">Tạo màn hình</string>
    <string name="zingpaysdk_alert_transition_screen">Chuyển trang</string>
    <string name="zingpaysdk_alert_processing_check_app_info">Kiểm tra thông tin ứng dụng</string>
    <string name="zingpaysdk_alert_processing_loading_resource">Khởi tạo dữ liệu ứng dụng</string>
    <string name="zingpaysdk_confirm_quit">Giao dịch sẽ bị hủy.\nBạn thật sự muốn thoát ?</string>
    <string name="zingpaysdk_confirm_quit_rescan_qrcode">Giao dịch sẽ bị hủy,cần tạo lại giao dịch từ đầu.\n Bạn thật sự muốn thoát ?</string>
    <string name="zpw_confirm_quit_loadsite">Bạn đã chọn BACK nhưng giao dịch vẫn đang xử lý.\nBạn thật sự muốn thoát?</string>
    <string name="zpw_string_load_website_timeout_message">Dữ liệu chưa tải xong, vui lòng kiểm tra lại kết nối mạng!</string>
    <string name="zingpaysdk_alert_processing_ask_to_retry">Giao dịch vẫn còn đang xử lý.\nBạn có muốn thử lại?</string>
    <string name="zingpaysdk_alert_error_networking_ask_to_retry">Không thể kết nối tới Zalo Pay, vui lòng kiểm tra kết nối mạng.\nBạn có muốn thử lại?</string>
    <string name="zpw_error_transaction_duplicate_message">Giao dịch chưa hoàn thành.\nVui lòng thực hiện lại giao dịch...!</string>
    <string name="zingpaysdk_alert_processing_get_status_fail">Vui lòng kiểm tra kết quả giao dịch trong phần Lịch Sử Thanh Toán sau ít phút</string>
    <string name="zingpaysdk_alert_processing_get_status_linkcard_fail">Vui lòng kiểm tra kết quả trong phần Liên Kết Thẻ sau ít phút</string>
    <string name="zingpaysdk_alert_no_connection">Không có kết nối internet.\nVui lòng kiểm tra kết nối mạng!</string>
    <string name="zingpaysdk_alert_network_error">Vui lòng kiểm tra kết nối mạng và thử lại!</string>
    <string name="zpw_alert_networking_off_in_transaction">Mạng đã tắt. Vui lòng bật mạng và thực hiện lại giao dịch</string>
    <string name="zpw_alert_network_error_getappinfo">Mạng không ổn định, không kiểm tra được thông tin.\nVui lòng kiểm tra lại kết nối mạng</string>
    <string name="zpw_alert_networking_error_check_status">Vui lòng xem lịch sử để kiểm tra trạng thái giao dịch</string>
    <string name="zpw_alert_process_error">Lỗi xử lý dữ liệu.Vui lòng xem lịch sử để kiểm tra trạng thái giao dịch</string>
    <string name="zpw_alert_order_not_submit">Mạng không ổn định, giao dịch chưa được gửi đi. Vui lòng kiểm tra kết nối mạng và thử lại!</string>
    <string name="zingpaysdk_alert_input_error">Dữ liệu giao dịch không hợp lệ</string>
    <string name="zpw_error_paymentinfo">Dữ liệu giao dịch không còn hiệu lực.\nVui lòng thực hiện lại giao dịch.</string>
    <string name="zingpaysdk_alert_context_error">Ngữ cảnh ứng dụng đã kết thúc.\nVui lòng đóng ứng dụng và khởi động lại ứng dụng để thực hiện lại!</string>
    <string name="zingpaysdk_alert_title_nointernet">HƯỚNG DẪN</string>
    <string name="zingpaysdk_alert_content_nointernet"><![CDATA[<b>Bật Wi-fi</b>: Chọn "<b>Settings</b>" (cài đặt) -" <b>Wi-fi</b>" và chọn mạng Wi-fi có sẵn.<br></br> <br></br><b>Bật 3G</b>: Chọn "<b>Settings</b>" (cài đặt) - "<b>Mobile Networks</b>" (di động) và bật "<b>Mobile Data</b>" (dữ lệu di động).]]></string>
    <string name="zpw_string_alert_permission_sms_not_allow">Bạn đã không cấp quyền nhận tin nhắn !\nỨng dụng sẽ không thể tự động nhận tin nhắn khi có OTP ngân hàng tới.</string>
    <string name="zpw_string_error_storage">Thiết bị của bạn không đủ dung lượng để lưu trữ dữ liệu ứng dụng.\nVui lòng thử lại sau khi đã giải phóng không gian vùng nhớ!</string>
    <string name="zingpaysdk_alert_network_error_download_resource">Không thể tải dữ liệu ứng dụng.\nVui lòng kiểm tra kết nối mạng hoặc thử lại sau vài phút!</string>
    <string name="zpw_string_error_parse_web">Không thể xử lý với ngân hàng, có thể do ngân hàng đang bảo trì.\nXin bạn vui lòng quay lại sau ít phút!</string>
    <string name="zpw_string_alert_submit_order">Đang gửi hóa đơn</string>
    <string name="zingpaysdk_missing_mac_info">Thông tin đơn hàng không hợp lệ.</string>
    <string name="zingpaysdk_missing_app_pmt_info">Thiếu thông tin đơn hàng.</string>
    <string name="zingpaysdk_missing_app_user">Thiếu thông tin user trong paymen info.</string>
    <string name="zingpaysdk_invalid_app_trans">Thiếu thông tin trong paymen info.</string>
    <string name="zingpaysdk_invalid_app_time">Thời gian không hợp lệ.</string>
    <string name="zingpaysdk_invalid_app_amount">Số tiền không hợp lệ.</string>
    <string name="zingpaysdk_invalid_user_id_user_name">Thông tin tài khoản Zalo Pay không hợp lệ</string>
    <string name="zingpaysdk_invalid_token">Token không hợp lệ</string>
    <string name="zalopay_invalid_app_id">App id không hợp lệ</string>
    <string name="zpw_conf_gwinfo_app_list">gwinfo_app_list_id</string>
    <string name="zingpaysdk_conf_gwinfo_expired_time">gwinfo_expired_time</string>
    <string name="zingpaysdk_conf_gwinfo_enable_deposite">gwinfo_enable_deposite</string>
    <string name="zingpaysdk_conf_gwinfo_banner_list">gwinfo_banner_list</string>
    <string name="zingpaysdk_conf_gwinfo_approve_inside_app">gwinfo_approve_inside_app</string>
    <string name="zingpaysdk_conf_gwinfo_sdk_checksum">checksum_sdk</string>
    <string name="zingpaysdk_conf_gwinfo_cardinfo_checksum">checksum_cardinfo</string>
    <string name="zingpaysdk_conf_gwinfo_bankaccount_checksum">checksum_bankaccount</string>
    <string name="zingpaysdk_conf_gwinfo_sdk_ver">checksum_sdk_ver</string>
    <string name="zpw_current_user_id">current_user_id</string>
    <string name="zingpaysdk_conf_gwinfo_unzip_path">unzip_path</string>
    <string name="zingpaysdk_conf_gwinfo_res_ver">resource_version</string>
    <string name="zingpaysdk_conf_gwinfo_udid">unit_device_id</string>
    <string name="zingpaysdk_pin_encrypted">pin_encrypted</string>
    <string name="zpw_resource_url">zpw_resource_url</string>
    <string name="zpw_conf_gwinfo_maintenance_withdraw">zpw_conf_gwinfo_maintenance_withdraw</string>
    <string name="zpw_conf_gwinfo_expired_time_duration">gwinfo_expired_time_duration</string>
    <string name="zingpaysdk_conf_gwinfo_channel_link_acc">2000</string>
    <string name="zingpaysdk_conf_gwinfo_channel_link_card">1000</string>
    <string name="zingpaysdk_conf_gwinfo_channel_wallet_transfer">1001</string>
    <string name="zingpaysdk_conf_gwinfo_channel_withdraw">1002</string>
    <string name="zingpaysdk_conf_gwinfo_channel_atm">39</string>
    <string name="zingpaysdk_conf_gwinfo_channel_credit_card">36</string>
    <string name="zingpaysdk_conf_gwinfo_channel_bankaccount">37</string>
    <string name="zingpaysdk_conf_gwinfo_channel_zalopay">38</string>
    <string name="zpw_conf_wallet_linkcard_desc">Zalo Pay sẽ chuyển %s VND từ TK thẻ vào TK Zalo Pay của bạn để kiểm tra tính hợp lệ.</string>
    <string name="zpw_conf_wallet_amount">20000</string>
    <string name="zpw_conf_wallet_id">1</string>
    <string name="zingpaysdk_conf_gwinfo_channel_list">channel_list_</string>
    <string name="zingpaysdk_conf_gwinfo_channel_prefix">channel_</string>
    <string name="zpw_config_platform_info_app">app_</string>
    <string name="zpw_conf_gwinfo_mapped_card_list">mapped_card_</string>
    <string name="zpw_conf_gwinfo_mapped_card_info">mapped_card_list_</string>
    <string name="zpw_conf_gwinfo_bank_account_list">bank_account_list_</string>
    <string name="walletsdk_string_bar_title">Thanh toán</string>
    <string name="zpw_string_pay_title">Nạp tiền</string>
    <string name="zpw_string_tranfer_title">Chuyển tiền</string>
    <string name="zpw_string_withdraw_title">Rút tiền</string>
    <string name="zingpaysdk_intent_key_channel">zpsdk_channel</string>
    <string name="zingpaysdk_pmc_name_zalopay">Tài khoản Zalo Pay</string>
    <string name="zpw_string_zalopay_balance_error_label">Số dư không đủ</string>
    <string name="zpw_string_zalopay_balance_label">Số dư</string>
    <string name="zpw_string_atm_method_name">Thẻ nội địa</string>
    <string name="zpw_string_credit_card_method_name">Thẻ tín dụng</string>
    <string name="zpw_string_vnd_success">  VND</string>
    <string name="zpw_string_alert_input_pin">Nhập mật khẩu thanh toán để giao dịch</string>
    <string name="zpw_string_pin_wrong">Mật khẩu thanh toán không đúng!</string>
    <string name="zpw_transaction_pay_success_status">Số tiền thanh toán</string>
    <string name="zpw_string_service_status">Thanh toán thành công</string>
    <string name="zpw_string_service_title">Dịch vụ</string>
    <string name="zpw_string_service_status_title">Trạng thái giao dịch</string>
    <string name="zpw_string_service_time_title">Thời gian giao dịch</string>
    <string name="zpw_string_service_transaction_title">Mã giao dịch</string>
    <string name="zpw_string_service_transaction_success">Thành công</string>
    <string name="zpw_string_visible_pin_on">Hiện</string>
    <string name="zpw_support_question">Câu Hỏi Thường Gặp</string>
    <string name="zpw_get_support">Gửi Báo Lỗi</string>
    <string name="zpw_support_btn_cancel">Hủy</string>
    <string name="header_title">Chọn số tài khoản</string>
    <string name="footer_button_confirm">ĐỒNG Ý</string>
</resources>