<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_zalopay_support"
    android:clickable="true"
    android:gravity="bottom"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_button_background"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_normal_plus" />

            <NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/white"
                android:theme="@style/appCompatStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:minHeight="@dimen/zpw_support_button_min_height"
                    android:paddingLeft="@dimen/zpw_padding_10"
                    android:paddingRight="@dimen/zpw_padding_10"
                    android:text="@string/zpw_support_btn_cancel"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/zpw_submit_button_text_size" />

                <Button
                    android:id="@+id/footer_confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_button"
                    android:text="@string/footer_button_confirm"
                    android:textColor="@color/blue_btn_bg_pressed_color"
                    android:textSize="@dimen/zpw_text_size_header" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

