<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/zpw_pin_view_height"
        android:visibility="visible">

        <TextView
            android:id="@+id/zpw_txt_PinError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/zpw_padding_top_bottom"
            android:gravity="center_horizontal"
            android:text="@string/zpw_string_pin_wrong"
            android:textColor="@color/holo_red_light"
            android:textSize="@dimen/zpw_text_size_medium_l"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/zpw_padding_top_bottom"
            android:gravity="center_horizontal"
            android:text="@string/zpw_string_alert_input_pin"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/zpw_text_size_medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <vn.com.zalopay.wallet.view.custom.pinview.GridPasswordView
                android:id="@+id/zpw_gridview_pin"
                android:layout_width="@dimen/zpw_pin_view_width"
                android:layout_height="@dimen/zpw_pin_view_height"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                app:gpvLineColor="@color/pin_color_bolder"
                app:gpvPasswordLength="@integer/wallet_pin_length"
                app:gpvPasswordType="numberPassword"
                app:gpvTextColor="@color/text_color_bold"
                app:gpvTextSize="@dimen/zpw_pin_view_textsize" />

            <TextView
                android:id="@+id/zpw_switchvisible_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/zpw_gridview_pin"
                android:gravity="center"
                android:paddingBottom="@dimen/zpw_padding_10"
                android:paddingLeft="@dimen/zpw_padding_8"
                android:paddingTop="@dimen/zpw_padding_10"
                android:singleLine="true"
                android:text="@string/zpw_string_visible_pin_on"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/zpw_text_size_medium_m" />

        </RelativeLayout>

    </LinearLayout>
    <!--
    <FrameLayout
        android:id="@+id/viewLockPin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:visibility="gone">
    </FrameLayout>
    -->

</FrameLayout>